# SensorSensei

./: .gitignore  Cargo.toml  LICENSE  README.md  configuration-index.html
.github/workflows/: ci.yml  mirroring.yml  rust_ci.yml
dashboard/: .env.example  docker-compose.yml
doc/: components.md  protocol.md  sensor-community.md
doc/LoRa-protocol/: LoRa-protocol.md
doc/diagrams/: IoT902-ActDiag-GatewayBoard.puml  IoT902-ActDiag-SensorBoard.puml  SensorSensei.drawio  app-layer-protocol-sequence.puml  link-layer-protocol-sequence.puml
drivers/dust_sensor_gp2y1014au/: Cargo.toml
drivers/dust_sensor_gp2y1014au/src/: lib.rs
gateway-board/: Cargo.toml  README.md  diagram.json  wokwi.toml
gateway-board/.cargo/: config.toml
gateway-board/src/: config.rs  display.rs  export.rs  lib.rs  lora.rs
gateway-board/src/comm/: app.rs  link.rs
gateway-board/src/net/: dhcp.rs  http.rs  mod.rs  tcp.rs  wifi.rs
gateway-board/src/net/http/: api.rs  client.rs  index.html  mod.rs  server.rs
node-board/: Cargo.toml
protocol/: Cargo.toml
protocol/src/: codec.rs  lib.rs  link.rs  phy.rs
protocol/src/app/: mod.rs  v1.rs
protocol/src/link/: v1.rs
sensor/: Cargo.toml
sensor-board/: Cargo.toml  LICENSE  Readme.md  platformio.ini
sensor-board/.cargo/: config.toml
sensor-board/src/: lib.rs  lora.rs
sensor-board/src/comm/: app.rs  link.rs  mod.rs
util/: Cargo.toml  README.md
util/src/: encoding.rs  lib.rs
