[package]
edition = "2021"
name = "gateway-board"
version = "0.1.0"

[[bin]]
name = "gateway-board"
path = "./src/bin/main.rs"

[features]
default = ["board-heltec-lora32v3", "display-ssd1306", "lora", "wifi"]

board-esp32dev = [
  "esp-backtrace/esp32",
  "esp-hal/esp32",
  "esp-hal-embassy/esp32",
  "esp-println/esp32",
  "esp-wifi/esp32",
]
board-heltec-lora32v3 = [
  "esp-backtrace/esp32s3",
  "esp-hal/esp32s3",
  "esp-hal-embassy/esp32s3",
  "esp-println/esp32s3",
  "esp-wifi/esp32s3",
]
display-ssd1306 = ["display-interface", "ssd1306"]
lora = ["lora-phy"]
wifi = [
  "edge-dhcp",
  "edge-nal-embassy",
  "edge-nal",
  "embassy-net",
  "esp-wifi",
  "heapless",
]

[dependencies]
cfg-if = "1.0.0"
defmt = "1.0.1"
display-interface = { version = "0.5.0", optional = true }
edge-dhcp = { version = "0.5.0", optional = true }
edge-nal-embassy = { version = "0.5.0", optional = true }
edge-nal = { version = "0.5.0", optional = true }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-net = { version = "0.6.0", optional = true, features = [
  "dhcpv4",
  "defmt",
  "proto-ipv4",
  "tcp",
  "medium-ethernet",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
enumset = "1.1.5"
esp-alloc = "0.7.0"
esp-backtrace = { version = "0.15.0", features = [
  "exception-handler",
  "panic-handler",
  "println",
] }
esp-hal = { version = "1.0.0-beta.0", features = ["unstable"] }
esp-hal-embassy = { version = "0.7.0", features = [] }
esp-println = { version = "0.13.0", features = ["defmt-espflash"] }
esp-wifi = { version = "0.13.0", optional = true, features = ["defmt", "wifi"] }
heapless = { version = "0.8.0", optional = true }
lora-phy = { version = "3.0.1", optional = true }
portable-atomic = "1.11.0"
protocol = { path = "../protocol" }
thiserror = { version = "2.0.12", default-features = false }
ssd1306 = { version = "0.10.0", optional = true, features = ["async"] }
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
