[package]
edition = "2021"
name = "gateway-board"
version = "0.1.0"

[[bin]]
name = "gateway-board"
path = "./src/bin/main.rs"

[features]
default = ["board-heltec-lora32v3", "display-ssd1306", "lora", "wifi"]
board-esp32dev = [
  "esp-backtrace/esp32",
  "esp-hal/esp32",
  "esp-hal-embassy/esp32",
  "esp-println/esp32",
  "esp-wifi/esp32",
  "esp-storage/esp32",
]
board-heltec-lora32v3 = [
  "esp-backtrace/esp32s3",
  "esp-hal/esp32s3",
  "esp-hal-embassy/esp32s3",
  "esp-println/esp32s3",
  "esp-wifi/esp32s3",
  "esp-storage/esp32s3",
]
display-ssd1306 = ["display-interface", "ssd1306"]
lora = ["lora-phy"]
wifi = [
  "edge-dhcp",
  "edge-nal-embassy",
  "edge-nal",
  "embassy-net",
  "esp-wifi",
  "heapless",
]
tcp-debug = []

[dependencies]
cfg-if = "1.0.0"
defmt = "1.0.1"
display-interface = { version = "0.5.0", optional = true }
edge-dhcp = { version = "0.5.0", optional = true }
edge-nal-embassy = { version = "0.5.0", optional = true }
edge-nal = { version = "0.5.0", optional = true }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["task-arena-size-20480"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-net = { version = "0.6.0", optional = true, features = [
  "dhcpv4",
  "defmt",
  "dns",
  "proto-ipv4",
  "tcp",
  "medium-ethernet",
] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-hal-async = "1.0.0"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"
enumset = "1.1.5"
esp-hal = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0", features = [
  "unstable"
] }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0", features = [
], package = "esp-hal-embassy" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0", optional = true, features = [
  "defmt",
  "wifi"
], package = "esp-wifi" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0", package = "esp-alloc" }
esp-println = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0", features = [
  "defmt-espflash"
], package = "esp-println" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0", features = [
  "exception-handler",
  "panic-handler",
  "println",
], package = "esp-backtrace" }
esp-storage = { git = "https://github.com/esp-rs/esp-hal.git", tag = "esp-hal-v1.0.0-beta.0", features = [ "nor-flash" ] }
heapless = { version = "0.8.0", optional = true }
lora-phy = { version = "3.0.1", optional = true }
memchr = { version = "2.7.4", default-features = false }
portable-atomic = "1.11.0"
protocol = { path = "../protocol" }
thiserror = { version = "2.0.12", default-features = false }
ssd1306 = { version = "0.10.0", optional = true, features = ["async"] }
static_cell = "2.1.0"
util = { path = "../util" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
