[package]
edition = "2021"
name = "sensor-board"
version = "0.1.0"

[[bin]]
name = "sensor-board"
path = "./src/bin/main.rs"

[features]
default = ["lora"]

lora = ["lora-phy"]


[dependencies]
critical-section = "1.2.0"
esp-alloc = { version = "0.6.0" }
esp-backtrace = { version = "0.15.0", features = [
  "esp32",
  "exception-handler",
  "panic-handler",
  "println",
] }
# Needed by esp-hal (or else it won't resolve)
esp-synopsys-usb-otg = { version = "0.4.2", features = ["fs", "esp32sx"] }
defmt = "1.0.1"
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["defmt", "task-arena-size-16384"] }
embassy-sync = "0.6.2"
embassy-time = { version = "0.4.0", features = ["generic-queue-64"] }
esp-hal = { version = "1.0.0-beta.0", features = ["esp32", "defmt", "unstable"] }
esp-hal-embassy = { version = "0.7.0", features = ["esp32"] }
esp-println = { version = "0.13.1", features = ["esp32", "defmt-espflash"] }
lora-phy = { version = "3.0.1", optional = true }
static_cell = "2.1.0"
thiserror = { version = "2.0.12", default-features = false }
dust_sensor_gp2y1014au = { path = "../drivers/dust_sensor_gp2y1014au" }




[build-dependencies]
embuild = "0.33"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
